---------------------------------------------------------------------------------------------------
Version: 0.69.91
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.69.90
Date: 2025-07-28
  Changes:
    - Future-proofed some recipe category changes vs vanilla, as there are plans to replace all the "or" categories. The only material impact this should have is that Corrundum's catalytic plant loses access to holmium craptalysis, which is a recipe it was never supposed to have.
    - Planet portal linked belts now banned from Rubia.
    - Added explicit wind speeds to more mod planets.
    - Crushing industry recycling compat fix about recycling sand.
---------------------------------------------------------------------------------------------------
Version: 0.69.89
Date: 2025-07-27
  Changes:
    - Added freezing mechanics for most Rubia entities (for Aquilo etc). If this breaks a base, sorry not sorry. I also included heating energy for things that are normally locked to Rubia, just in case you use a mod that removes surface conditions, or mods that have other mechanics (eg Sniper turrets on Cerys). Heat energy changes from 0kW:
      ► Already had frost: wind turbine, biorecycling plant, long stack inserter
      ► Long bulk insterter => 50kW
      ► Crapapult => 200 kW
      ► Sniper turret => 50 kW
      ► Garbo grabber => 200 kW (why you'd ever need this outside Rubia, idfk).
---------------------------------------------------------------------------------------------------
Version: 0.69.88
Date: 2025-07-26
  Changes:
    - Long stack inserter HP 160 => 400. I had forgotten to give it better stats.
    - Wind turbine max HP 200 => 250. A slight little buff, since these are on the outskirts usually.
    - Garbo grabber max HP 1000 => 600.
    - Biofused promethium science tech cost reduced: 1M => 100k. This should make it more viable to get this for less mega-basey setups.